--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,19 @@
-
+alembic==0.9.5
+blinker==1.4
 click==6.7
 Flask==0.12.2
+Flask-Cache==0.13.1
+Flask-DebugToolbar==0.10.1
+Flask-Login==0.4.0
+Flask-Migrate==2.1.1
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.2
 itsdangerous==0.24
 Jinja2==2.9.6
+Mako==1.0.7
 MarkupSafe==1.0
+python-dateutil==2.6.1
+python-editor==1.0.3
+six==1.10.0
+SQLAlchemy==1.1.14
 Werkzeug==0.12.2
-wheel==0.24.0
