--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
 alembic==0.9.5
 blinker==1.4
 click==6.7
+decorator==4.1.2
+dominate==2.3.1
 Flask==0.12.2
+Flask-Bootstrap==3.3.7.1
 Flask-Cache==0.13.1
 Flask-DebugToolbar==0.10.1
 Flask-Login==0.4.0
 Flask-Migrate==2.1.1
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.2
+Flask-WTF==0.14.2
+infinity==1.4
+intervals==0.8.0
 itsdangerous==0.24
 Jinja2==2.9.6
 Mako==1.0.7
@@ -16,4 +22,10 @@ python-dateutil==2.6.1
 python-editor==1.0.3
 six==1.10.0
 SQLAlchemy==1.1.14
+SQLAlchemy-Utils==0.32.16
+validators==0.12.0
+visitor==0.1.3
 Werkzeug==0.12.2
+WTForms==2.1
+WTForms-Alchemy==0.16.5
+WTForms-Components==0.10.3
