--- a/requirements.txt
+++ b/requirements.txt
@@ -7,17 +7,20 @@ Flask==0.12.2
 Flask-Bootstrap==3.3.7.1
 Flask-Cache==0.13.1
 Flask-DebugToolbar==0.10.1
+flask-logging==0.1.0
 Flask-Login==0.4.0
 Flask-Migrate==2.1.1
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.2
 Flask-WTF==0.14.2
+generator-pack==0.1.0
 infinity==1.4
 intervals==0.8.0
 itsdangerous==0.24
 Jinja2==2.9.6
 Mako==1.0.7
 MarkupSafe==1.0
+Menu==3.1.0
 python-dateutil==2.6.1
 python-editor==1.0.3
 six==1.10.0
