--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 alembic==0.9.5
 blinker==1.4
+certifi==2018.4.16
+chardet==3.0.4
 click==6.7
 decorator==4.1.2
 dominate==2.3.1
@@ -14,6 +16,7 @@ Flask-Script==2.0.6
 Flask-SQLAlchemy==2.2
 Flask-WTF==0.14.2
 generator-pack==0.1.0
+idna==2.6
 infinity==1.4
 intervals==0.8.0
 itsdangerous==0.24
@@ -23,9 +26,11 @@ MarkupSafe==1.0
 Menu==3.1.0
 python-dateutil==2.6.1
 python-editor==1.0.3
+requests==2.18.4
 six==1.10.0
 SQLAlchemy==1.1.14
 SQLAlchemy-Utils==0.32.16
+urllib3==1.22
 validators==0.12.0
 visitor==0.1.3
 Werkzeug==0.12.2
