--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bootstrap": "^4.0.0-beta.2",
     "bootstrap-vue": "latest",
+    "font-awesome": "^4.7.0",
     "popper.js": "^1.12.9",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
