--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ dominate==2.3.1
 Flask==0.12.2
 Flask-Bootstrap==3.3.7.1
 Flask-Cache==0.13.1
+Flask-Cors==3.0.4
 Flask-DebugToolbar==0.10.1
 flask-logging==0.1.0
 Flask-Login==0.4.0
@@ -24,6 +25,7 @@ Jinja2==2.9.6
 Mako==1.0.7
 MarkupSafe==1.0
 Menu==3.1.0
+pkg-resources==0.0.0
 python-dateutil==2.6.1
 python-editor==1.0.3
 requests==2.18.4
