--- a/front/package.json
+++ b/front/package.json
@@ -5,7 +5,7 @@
   "author": "Dmitry Kutsenko <d2emonium@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "node build/dev-server.js",
+    "dev": "cross-env API_BASE_URL=http://127.0.0.1:5000/api node build/dev-server.js",
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
